# App_Review_Project

./: .gitignore  Dockerfile  README.md  docker-compose.yml
app_review_project/: .env  pyproject.toml
app_review_project/config/: common_config.py  db_config.py  minio_config.py  spark_config.py
app_review_project/process/: process.py  wordcloud_generator.py
app_review_project/scraper/: appstore_scraper.py  google_play_scraper.py
app_review_project/utils/: appstore_utils.py  common_utils.py  db_utils.py  minio_utils.py
dags/: crawler_dag.py  google_crawler_dag.py  process_reivews_dag.py
scripts/: init-db.sh  load_env.sh
storage/.minio.sys/: format.json
storage/app-reviews/appstore/6504213798_reviews.json/7a2c69b6-d4ba-4102-a2ae-a35e03c9dcc3/: part.1
